5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1674_1100.log
== TEST (2019-04-25 10:49:08) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:14) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
-- OUTPUT:
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:41) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100)
	if (vc==2):
		print("Animal:")
	elif(vc==5):
		print("Animal:")
	elif(vc==10):
		print("Animal:")
	elif(vc==20):
		print("Animal:")
	elif(vc==50):
		print("Animal:")
	elif(vc==100):
		print("Animal:")
-- ERROR:
File "XXXX", line 3
    if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100)
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:55:48) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal:")
	elif(vc==5):
		print("Animal:")
	elif(vc==10):
		print("Animal:")
	elif(vc==20):
		print("Animal:")
	elif(vc==50):
		print("Animal:")
	elif(vc==100):
		print("Animal:")
-- OUTPUT:
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:13) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal:")
	elif(vc==5):
		print("Animal:")
	elif(vc==10):
		print("Animal:")
	elif(vc==20):
		print("Animal:")
	elif(vc==50):
		print("Animal:")
	elif(vc==100):
		print("Animal:")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:56:19) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal:")
	elif(vc==5):
		print("Animal:")
	elif(vc==10):
		print("Animal:")
	elif(vc==20):
		print("Animal:")
	elif(vc==50):
		print("Animal:")
	elif(vc==100):
		print("Animal:")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:29) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garça")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leão-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal:Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:38) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garça")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leão-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal:Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:59) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garça")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal:Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:58:07) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garça")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal:Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.151276
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal:Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:11) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garça")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal:Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal:Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:58:32) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garca")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.117183
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:33) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garca")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onça-pintada")
	elif(vc==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:58:38) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garca")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onca-pintada")
	elif(vc==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.156241
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:48:20) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garca")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onca-pintada")
	elif(vc==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:48:22) 
-- CODE:
vc= int(input("insira o valor da cedula: "))
print("Entrada:",vc)
if (vc==2) or (vc==5) or (vc==10) or (vc==20) or (vc==50) or (vc==100):
	if (vc==2):
		print("Animal: Tartaruga")
	elif(vc==5):
		print("Animal: Garca")
	elif(vc==10):
		print("Animal: Arara")
	elif(vc==20):
		print("Animal: Mico-leao-dourado")
	elif(vc==50):
		print("Animal: Onca-pintada")
	elif(vc==100):
		print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.189957
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
